2000-07-25  Rodney Brown  <RodneyBrown@pmsc.com>

	* config/alpha/osf.h (SIZE_TYPE, PTRDIFF_TYPE): New.

Tue Jul 25 23:08:33 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* sh.md (cmpgtdi_t): Must be split.
	(cmpgtdi_t+1): New splitter.

2000-07-25  Zack Weinberg  <zack@wolery.cumb.org>

	* cpplib.c (_cpp_check_directive): Issue -Wtraditional
	warnings for indented directives even if we are skipping.

2000-07-25  Nathan Sidwell  <nathan@codesourcery.com>

	* invoke.texi (strict-prototypes): Remove.
	* extend.texi (Deprecated Features): Add strict-prototypes.
	(Backwards Compatibility): New node.

2000-07-25  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.md (andsi_1+1): Allow HImode.
	(andsi_1+2): Require q_regs_operand.

2000-07-25  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.md (call_pop): Check operands[0],
	not operands[1]. Only check SYMBOL_REF_FLAG for a SYMBOL_REF.
	(call): Likewise.
	(call_value_pop): Only check SYMBOL_REF_FLAG for a SYMBOL_REF.
	(call_value): Likewise.

2000-07-25  Zack Weinberg  <zack@wolery.cumb.org>

	* toplev.c (pipe_closed): Delete.
	(crash_signal): New.  Generate ICE for a fatal signal.
	(float_signal): Call crash_signal outside a float-handler
	block, not abort.
	(main): Install crash_signal as handler for core-dumping signals.

2000-07-25  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (print_operand, case 'T'): New case.

	* rs6000.md (call_indirect_aix32): Convert to expander of
	scheduled instructions.
	(call_indirect_aix64): Likewise.
	(call_value_indirect_aix{32,64}): Likewise.
	(call, call_value): Invoke expanders for AIX.  Fall through to
	matchers for SysV.
	(call_indirect_nonlocal_aix{32,64}): New patterns (ctr and lr).
	(call_value_indirect_nonlocal_aix{32,64}): New patterns.
	(call_nonlocal_aix32): Remove CALL_LONG alternative.  Operand 1
	only "g" constraint.
	(call_nonlocal_aix64): Likewise.
	(call_value_nonlocal_aix{32,64}): Likewise.
	(call_nonlocal_sysv): New pattern for ctr, lr, and symbolic