@@ -1,3 +1,10 @@
+2000-07-26  Alexandre Oliva  <aoliva@redhat.com>
+
+	* c-decl.c (finish_enum): Convert enumerations that fit in an
+	`int' to `int'.
+	(build_enumerator): In pedantic mode, cast to `int' those that
+	don't.
+
 2000-07-25  Rodney Brown  <RodneyBrown@pmsc.com>
 
 	* config/alpha/osf.h (SIZE_TYPE, PTRDIFF_TYPE): New.
